2008-08-28 ivan
* Decrease default session life time

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2007-06-07 Ivan
* Update. Split core script from widgets

2007-01-30 Ivan
* Update

2007-01-12 Ivan
* Initial import