@@ -1,3 +1,0 @@
-portal_caches/erp5_session_cache
-portal_caches/erp5_session_cache/**
-portal_sessions
